--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -169,7 +169,7 @@ h6 {
 }
 
 .head_text {
-  @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
+  @apply mt-5 text-5xl  leading-[1.15] text-black sm:text-6xl;
 }
 
 .orange_gradient {
